[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mineru"
dynamic = ["version"]
license = "LicenseRef-MinerU-Open-Source-License"
license-files = ["LICENSE.md"]
description = "A practical document parsing tool for converting PDF, images, DOCX, PPTX, and XLSX into Markdown and JSON"
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = [
    "mineru",
    "magic-pdf",
    "document-parsing",
    "document-understanding",
    "pdf",
    "markdown",
    "ocr",
    "vlm",
    "docx",
    "pptx",
    "xlsx",
    "multimodal",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.7",
    "loguru>=0.7.2",
    "numpy>=1.21.6",
    "tqdm>=4.67.1",
    "requests",
    "httpx",
    "pillow>=11.0.0",
    "pypdfium2>=4.30.0,<6.0.0",
    "pypdf>=5.6.0",
    "PyYAML>=6.0.1,<7",
    "packaging",
    "reportlab",
    "pdftext>=0.6.3,<0.8.0",
    "modelscope>=1.26.0",
    "huggingface-hub>=0.32.4",
    "filelock>=3.0.0",
    "json-repair>=0.46.2",
    "opencv-python>=4.11.0.86",
    "fast-langdetect>=0.2.3,<0.3.0",
    "openai>=1.70.0,<3",
    "beautifulsoup4>=4.13.5,<5",
    "magika>=0.6.2,<1.1.0",
    "mineru-vl-utils>=1.0.5,<2",
    "python-docx>=1.2.0,<2",
    'pypptx-with-oxml>=1.0.3,<2',
    "mammoth>=1.11.0,<2",
    "pylatexenc>=2.10,<3",
    "lxml>=4.0.0,<7.0.0",
    "openpyxl>=3.1.5,<4",
    "aiosqlite>=0.20.0,<1",
    "watchfiles>=1.0.0,<2",
    "fastapi",
    "python-multipart",
    "uvicorn",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jieba>=0.42.1",
    "onnxruntime>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "lxml-stubs",
]
test = [
    "mineru[standard]",
    "pytest",
    "pytest-cov",
    "coverage",
    "fuzzywuzzy",
    "tomli; python_version < '3.11'",
]
basic = [
    "ftfy>=6.3.1,<7",
    "shapely>=2.0.7,<3",
    "pyclipper>=1.3.0,<2",
    "six>=1.17.0,<2",
    "torch>=2.6.0,<3",
    "torchvision",
    "transformers>=4.57.3,<5.0.0",
    "safetensors>=0.4.0,<1",
]
standard = [
    "mineru[basic]",
    "accelerate>=1.5.1",
    "vllm>=0.10.1.1,<0.22.0 ; sys_platform == 'linux'",
    "lmdeploy>=0.10.2,<0.12 ; sys_platform == 'win32'",
    "qwen-vl-utils>=0.0.14,<1 ; sys_platform == 'win32'",
    "mlx<=0.31.1 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-vlm>=0.3.3,<0.4 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
gradio = [
    "gradio>=5.49.1,!=6.0.0,!=6.0.1,!=6.0.2,!=6.1.0,!=6.2.0,!=6.3.0,!=6.4.0,!=6.5.0,!=6.5.1,!=6.6.0,!=6.7.0,<6.9.0",
    "gradio-pdf>=0.0.22",
]
all = [
    "mineru[standard]",
    "mineru[gradio]",
]

[tool.uv]
exclude-dependencies = [
    "datasets",
]

[project.urls]
homepage = "https://mineru.net/"
documentation = "https://opendatalab.github.io/MinerU/"
repository = "https://github.com/opendatalab/MinerU"
issues = "https://github.com/opendatalab/MinerU/issues"
License = "https://github.com/opendatalab/MinerU/blob/master/LICENSE.md"

[project.scripts]
mineru = "mineru.cli.main:app"
mineru-kit = "mineru.kit.main:app"
mineru-gradio = "mineru.cli_old.gradio_app:main"

[tool.setuptools.dynamic]
version = { attr = "mineru.version.__version__" }

[tool.setuptools.packages.find]
include = ["mineru*"]
namespaces = false

[tool.setuptools.package-data]
"mineru" = ["resources/**"]
"mineru.doclib.migrations" = ["*.sql"]
"mineru.model.utils.pytorchocr.utils" = ["resources/**"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.pytest.ini_options]
addopts = "-s --cov=mineru --cov-report html"

[tool.coverage.run]
command_line = "-m pytest tests/unittest/test_e2e.py"
source = ["mineru/"]
omit = [
    "*/gradio_app.py",
    "*/fast_api.py",
    "*/cli/client.py",
    "*/vlm_vllm_server.py",
    "*/cli_parser.py",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = ["C", "E", "F", "W", "ANN"]
ignore = ["C901", "ANN204", "ANN401"]
